added MSVC2019 project files + augmented the OpenSSL and GnuTLS interface source files to only compile tot a non-empty unit when these libraries are used by qpdf (qpdf-config.h)

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ manual/print.xsl
 qpdf/build/
 zlib-flate/build/
 distribution/
+/win32/.vs/
+/win32/Debug-32/
+/win32/Release-32/
+/win32/Debug-64/
+/win32/Release-64/
+/win32/*.user
