--- a/win32/qpdf-ctest.vcxproj
+++ b/win32/qpdf-ctest.vcxproj
@@ -91,10 +91,10 @@
     <ClInclude Include="qpdf\qpdf-config.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\qpdf\qpdf.cc" />
+    <ClCompile Include="..\qpdf\qpdf-ctest.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{84E4CC46-896A-4A20-B5BE-B55851A17A14}</ProjectGuid>
+    <ProjectGuid>{94899F47-9BE3-4EC1-9FDA-B6871B3A1156}</ProjectGuid>
     <RootNamespace>qpdf</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
