--- a/win32/test_parsedoffset.vcxproj.filters
+++ b/win32/test_parsedoffset.vcxproj.filters
@@ -24,9 +24,6 @@
     <None Include="..\qpdf\Makefile">
       <Filter>qpdf</Filter>
     </None>
-    <None Include="..\qpdf\qpdf.testcov">
-      <Filter>qpdf</Filter>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\qpdf\Buffer.hh">
@@ -202,7 +199,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\qpdf\qpdf.cc">
+    <ClCompile Include="..\qpdf\test_parsedoffset.cc">
       <Filter>qpdf</Filter>
     </ClCompile>
   </ItemGroup>
