--- a/win32/test_pdf_doc_encoding.vcxproj
+++ b/win32/test_pdf_doc_encoding.vcxproj
@@ -21,7 +21,6 @@
   <ItemGroup>
     <None Include="..\qpdf\build.mk" />
     <None Include="..\qpdf\Makefile" />
-    <None Include="..\qpdf\qpdf.testcov" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\CS\MuPDF\platform\win32\libthirdparty.vcxproj">
@@ -91,10 +90,10 @@
     <ClInclude Include="qpdf\qpdf-config.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\qpdf\qpdf.cc" />
+    <ClCompile Include="..\qpdf\test_pdf_doc_encoding.cc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{84E4CC46-896A-4A20-B5BE-B55851A17A14}</ProjectGuid>
+    <ProjectGuid>{9CD995C3-970B-4EDC-A35F-3C59F72F82F5}</ProjectGuid>
     <RootNamespace>qpdf</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
