--- a/win32/zlib_flate.vcxproj
+++ b/win32/zlib_flate.vcxproj
@@ -19,9 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\qpdf\build.mk" />
-    <None Include="..\qpdf\Makefile" />
-    <None Include="..\qpdf\qpdf.testcov" />
+    <None Include="..\zlib-flate\build.mk" />
+    <None Include="..\zlib-flate\Makefile" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\CS\MuPDF\platform\win32\libthirdparty.vcxproj">
@@ -91,10 +90,10 @@
     <ClInclude Include="qpdf\qpdf-config.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\qpdf\qpdf.cc" />
+    <ClCompile Include="..\zlib-flate\zlib-flate.cc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{84E4CC46-896A-4A20-B5BE-B55851A17A14}</ProjectGuid>
+    <ProjectGuid>{987620B7-C480-4F08-9EF7-42966E6A63EF}</ProjectGuid>
     <RootNamespace>qpdf</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
